Refactor CarregarCloud to be more in-line with Carregar and CarregarAlloc.